{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 1732,
  "lineage": "58e1130b-cf51-e65b-305c-76cf86a80032",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d68371c1aa43e1ad",
            "association_id": "eipassoc-06d08835aff0697ce",
            "domain": "vpc",
            "id": "eipalloc-0d68371c1aa43e1ad",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03feb527128d96ae0",
            "private_dns": "ip-172-16-1-75.ap-south-1.compute.internal",
            "private_ip": "172.16.1.75",
            "public_dns": "ec2-3-111-27-123.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.27.123",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef3290da24f28f78",
            "association_id": "eipassoc-0abb2d8c5644706e7",
            "domain": "vpc",
            "id": "eipalloc-0ef3290da24f28f78",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-074487d58b79d2255",
            "private_dns": "ip-172-16-2-246.ap-south-1.compute.internal",
            "private_ip": "172.16.2.246",
            "public_dns": "ec2-43-204-104-251.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.104.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion-Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:502203921648:instance/i-00cf79a90f824c6e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cf79a90f824c6e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03224f60cc0e71734",
            "private_dns": "ip-172-16-1-182.ap-south-1.compute.internal",
            "private_ip": "172.16.1.182",
            "public_ip": "13.233.231.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0185a190ac50b7a90",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fdb5bc64823be0bd",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tags_all": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a2f1bdc54e6ccc0"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:internet-gateway/igw-0d00c1936e01f24b5",
            "id": "igw-0d00c1936e01f24b5",
            "owner_id": "502203921648",
            "tags": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:loadbalancer/app/Demo1-ALG-tf/bc95c01ed8753b0c",
            "arn_suffix": "app/Demo1-ALG-tf/bc95c01ed8753b0c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Demo1-ALG-tf-838420528.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:loadbalancer/app/Demo1-ALG-tf/bc95c01ed8753b0c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Demo1-ALG-tf",
            "security_groups": [
              "sg-025f97cb1cc44f475"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e21a7c3b1bdeaa7"
              },
              {
                "subnet_id": "subnet-0fdb5bc64823be0bd"
              }
            ],
            "subnets": [
              "subnet-08e21a7c3b1bdeaa7",
              "subnet-0fdb5bc64823be0bd"
            ],
            "tags": {
              "Project": "demo-assignment",
              "name": "Demo2-AppLoadBalancer-tf"
            },
            "tags_all": {
              "Project": "demo-assignment",
              "name": "Demo2-AppLoadBalancer-tf"
            },
            "vpc_id": "vpc-0b41c58948a0411cb",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:listener/app/Demo1-ALG-tf/bc95c01ed8753b0c/48d9f9897ef5992b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:targetgroup/Demo1-TargetGroup-tf/bfdf4ff4ad481168",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:listener/app/Demo1-ALG-tf/bc95c01ed8753b0c/48d9f9897ef5992b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:loadbalancer/app/Demo1-ALG-tf/bc95c01ed8753b0c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.TG-tf",
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:targetgroup/Demo1-TargetGroup-tf/bfdf4ff4ad481168",
            "arn_suffix": "targetgroup/Demo1-TargetGroup-tf/bfdf4ff4ad481168",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:502203921648:targetgroup/Demo1-TargetGroup-tf/bfdf4ff4ad481168",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Demo1-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d68371c1aa43e1ad",
            "connectivity_type": "public",
            "id": "nat-028c7d63cc0ad5ef3",
            "network_interface_id": "eni-03feb527128d96ae0",
            "private_ip": "172.16.1.75",
            "public_ip": "3.111.27.123",
            "subnet_id": "subnet-0fdb5bc64823be0bd"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef3290da24f28f78",
            "connectivity_type": "public",
            "id": "nat-0c002f083fe596227",
            "network_interface_id": "eni-074487d58b79d2255",
            "private_ip": "172.16.2.246",
            "public_ip": "43.204.104.251",
            "subnet_id": "subnet-08e21a7c3b1bdeaa7"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:route-table/rtb-070fd9efaa2b49512",
            "id": "rtb-070fd9efaa2b49512",
            "owner_id": "502203921648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-028c7d63cc0ad5ef3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:route-table/rtb-0d7a7bc07774733c6",
            "id": "rtb-0d7a7bc07774733c6",
            "owner_id": "502203921648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c002f083fe596227",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:route-table/rtb-01ea7148af900931d",
            "id": "rtb-01ea7148af900931d",
            "owner_id": "502203921648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d00c1936e01f24b5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4de2ea1274deef5",
            "route_table_id": "rtb-01ea7148af900931d",
            "subnet_id": "subnet-0fdb5bc64823be0bd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff3fc63bc12e867b",
            "route_table_id": "rtb-01ea7148af900931d",
            "subnet_id": "subnet-08e21a7c3b1bdeaa7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4d42b65d337da3",
            "route_table_id": "rtb-070fd9efaa2b49512",
            "subnet_id": "subnet-0814c0066ad9f74fa"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_route_table.prv_sub1_rt",
            "aws_subnet.prv_sub1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070bdd3af20468256",
            "route_table_id": "rtb-0d7a7bc07774733c6",
            "subnet_id": "subnet-0e86938a1a4b9aa90"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_route_table.prv_sub2_rt",
            "aws_subnet.prv_sub2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:security-group/sg-025f97cb1cc44f475",
            "description": "SG for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025f97cb1cc44f475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "502203921648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:security-group/sg-09a2f1bdc54e6ccc0",
            "description": "SG for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a2f1bdc54e6ccc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "502203921648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:subnet/subnet-0814c0066ad9f74fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0814c0066ad9f74fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502203921648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:subnet/subnet-0e86938a1a4b9aa90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e86938a1a4b9aa90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502203921648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:subnet/subnet-0fdb5bc64823be0bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdb5bc64823be0bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502203921648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:subnet/subnet-08e21a7c3b1bdeaa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e21a7c3b1bdeaa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502203921648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0b41c58948a0411cb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:502203921648:vpc/vpc-0b41c58948a0411cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0c442db5566a75a2e",
            "default_route_table_id": "rtb-0d20c5bd9669649a8",
            "default_security_group_id": "sg-0b153f896f24df93a",
            "dhcp_options_id": "dopt-0285b8a59a4095f22",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b41c58948a0411cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d20c5bd9669649a8",
            "owner_id": "502203921648",
            "tags": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}